k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snmp-frontend
  labels:
    app.kubernetes.io/name: snmp-frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: snmp-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
